--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
     <ul id="IconSetNavigation">
       <li>
-        <a href="icon-set-linie-schmal.html">
+        <a href="icon-set-line-thin.html">
           <section>
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" preserveAspectRatio="xMidYMid meet">
-              <g class="icon-set-linie-schmal diamant">
+              <g class="icon-set-line-thin diamond">
                 <polygon points="20 6.331 8.441 6.331 13.913 16.013 20 6.331"/>
                 <polygon points="8.441 6.331 3.5 16.013 13.913 16.013 8.441 6.331"/>
                 <polygon points="31.559 6.331 20 6.331 26.087 16.013 31.559 6.331"/>
@@ -61,15 +61,15 @@
               </g>
             </svg>
             <h4>Linie I</h4>
-            <p>class="icon-set-linie-schmal icon"</p>
+            <p>class="icon-set-line-thin icon"</p>
           </section>
         </a>
       </li>
       <li>
-        <a href="icon-set-linie-dick.html">
+        <a href="icon-set-line-thick.html">
           <section>
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" preserveAspectRatio="xMidYMid meet">
-              <g class="icon-set-linie-dick diamant">
+              <g class="icon-set-line-thick diamond">
                 <polygon points="20 6.331 8.441 6.331 13.913 16.013 20 6.331"/>
                 <polygon points="8.441 6.331 3.5 16.013 13.913 16.013 8.441 6.331"/>
                 <polygon points="31.559 6.331 20 6.331 26.087 16.013 31.559 6.331"/>
@@ -82,15 +82,15 @@
               </g>
             </svg>
           <h4>Linie II</h4>
-          <p>class="icon-set-linie-dick icon"</p>
+          <p>class="icon-set-line-thick icon"</p>
         </section>
       </a>
       </li>
       <li>
-        <a href="icon-set-linie-schmal-duoton.html">
+        <a href="icon-set-line-thin-duoton.html">
         <section>
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" preserveAspectRatio="xMidYMid meet">
-            <g class="icon-set-linie-schmal diamant-duoton">
+            <g class="icon-set-line-thin diamond-duoton">
               <polygon points="20 6.331 8.441 6.331 13.913 16.013 20 6.331"/>
               <polygon points="8.441 6.331 3.5 16.013 13.913 16.013 8.441 6.331"/>
               <polygon points="31.559 6.331 20 6.331 26.087 16.013 31.559 6.331"/>
@@ -103,15 +103,15 @@
             </g>
           </svg>
           <h4>Duoton I</h4>
-          <p>class="icon-set-linie-schmal icon-duoton"</p>
+          <p>class="icon-set-line-thin icon-duoton"</p>
         </section>
       </a>
       </li>
       <li>
-        <a href="icon-set-linie-dick-duoton.html">
+        <a href="icon-set-line-thick-duoton.html">
         <section>
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" preserveAspectRatio="xMidYMid meet">
-            <g class="icon-set-linie-dick diamant-duoton">
+            <g class="icon-set-line-thick diamond-duoton">
               <polygon points="20 6.331 8.441 6.331 13.913 16.013 20 6.331"/>
               <polygon points="8.441 6.331 3.5 16.013 13.913 16.013 8.441 6.331"/>
               <polygon points="31.559 6.331 20 6.331 26.087 16.013 31.559 6.331"/>
@@ -124,7 +124,7 @@
             </g>
           </svg>
           <h4>Duoton II</h4>
-          <p>class="icon-set-linie-dick icon-duoton"</p>
+          <p>class="icon-set-line-thick icon-duoton"</p>
         </section>
       </a>
       </li>
