--- a/icon-set-line-thin-duoton.html
+++ b/icon-set-line-thin-duoton.html
@@ -27,7 +27,7 @@
 
   <link rel="stylesheet" href="css/design.min.css">
   <link rel="stylesheet" href="css/responsive.min.css">
-  <title>Icon Set/Font — Entwicklung</title>
+  <title>Icon Set — Development</title>
 </head>
 
 <body>
