--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <link rel="stylesheet" href="css/design.min.css">
   <link rel="stylesheet" href="css/responsive.min.css">
-  <title>Icon Set/Font — Entwicklung</title>
+  <title>Icon Set — Development</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                 <polygon points="31.559 6.331 20 6.331 8.441 6.331 3.5 16.013 20 33.669 36.5 16.013 31.559 6.331"/>
               </g>
             </svg>
-            <h4>Linie I</h4>
+            <h4>Line I</h4>
             <p>class="icon-set-line-thin icon"</p>
           </section>
         </a>
@@ -74,7 +74,7 @@
                 <polygon points="31.559 6.331 20 6.331 8.441 6.331 3.5 16.013 20 33.669 36.5 16.013 31.559 6.331"/>
               </g>
             </svg>
-          <h4>Linie II</h4>
+          <h4>Line II</h4>
           <p>class="icon-set-line-thick icon"</p>
         </section>
       </a>
